--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -6,7 +6,7 @@ services:
     restart: always
     command: --port 3306 --character-set-server=utf8mb4 --collation-server=utf8mb4_unicode_ci
     volumes:
-      - /data/spug/mysql:/var/lib/mysql
+      - ./data/spug/mysql:/var/lib/mysql
     environment:
       - MYSQL_DATABASE=spug
       - MYSQL_USER=spug
@@ -18,8 +18,8 @@ services:
     privileged: true
     restart: always
     volumes:
-      - /data/spug/service:/data/spug
-      - /data/spug/repos:/data/repos
+      - ./data/spug/service:/data/spug
+      - ./data/spug/repos:/data/repos
     ports:
       # 如果80端口被占用可替换为其他端口，例如: - "8000:80"
       - "8081:80"
